--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="imagenes/favicon.ico">
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=lVzyNYpv"></script>
     <title>Encriptador de Texto</title>
 </head>
 <body>
     <!-- Encabezado -->
     <header>
-        <a href="#">
-            <img src="imagenes/logo.svg" alt="logo_alura" class="logo">
+        <a href="https://historiade.org/criptografia/" target="_blank">
+            <img src="imagenes/diamante.png" alt="logo_alura" class="logo">
         </a>
+        <h1>Encriptador Parlante</h1>
     </header>
     <!-- Parte principal -->
     <main>
@@ -27,6 +29,7 @@
            <div class="encriptador-contenedor">
             <button type="submit" class="btn-encriptar">Encriptar</button>
             <button type="submit" class="btn-desencriptar">Desencriptar</button>
+      
         </div>
        </section>
        <!-- Seccion desencriptar-->
@@ -36,13 +39,17 @@
             <p class="texto-uno">Ningun mensaje fue encontrado</p>
             <p class="texto-dos">Ingresa el texto que deseas encriptar o desencriptar</p>
         </div>
+      
         <textarea type="mensaje" class="evaluar" readonly></textarea>
         <button type="submit" class="btn-copiar">Copiar</button>
+        <img src="imagenes/altavoz.png" alt="" class="parlante">
+ 
+
        </section> 
     </main>
 <!-- Footer -->
 <footer>
-    <p class="copyright">&copy; 2024 -Encriptador de Texto, desarrollado por Veronique!</p>
+    <p class="copyright">&copy; 2024 - Veronique!</p>
     <a href="https://www.linkedin.com/in/veronica-isabel-pereira/" target="_blank">
         <img src="imagenes/linkedin.svg" alt="linkedin" class="linked"></a>
         <a href="https://github.com/veronicaisabelpereira" target="_blank">
